<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="applabindia.com.tattoojocky.LoginActivity"
    android:background="@color/transparent">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/login_edit_border">



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="@dimen/login_input_textsize"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/grey"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/loginKeyboard"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="@dimen/login_input_textsize"
                    android:drawableRight="@drawable/ic_visibility_off_black_24dp"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/grey"
                    android:singleLine="true"
                    android:onClick="btnClick"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                style="@style/ButtonAppTheme"
                android:enabled="true"
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/forgotPwdTxtSigninViw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="FORGOT PASSWORD?"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_alignParentLeft="true"
                    android:onClick="btnClick"
                    android:padding="10dp"/>

                <TextView
                    android:id="@+id/signupTxViw"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SIGNUP"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:onClick="btnClick"
                    android:padding="10dp"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
