<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/profile_screen"
    android:scrollbars="none"
    app:behavior_overlapTop="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="8dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp"
            app:contentPaddingTop="5dp"
            app:contentPaddingBottom="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_toLeftOf="@+id/devider"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/prompt_joining_date"
                    android:textSize="@dimen/TextSizeMicro"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_grey" />


                <TextView
                    android:id="@+id/profileJoiningDt"
                    android:layout_width="match_parent"
                    android:layout_toLeftOf="@+id/devider"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:layout_marginTop="20dp"
                    android:text="02/12/2014"
                    android:textSize="@dimen/TextSizeExtraLarge"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/action_bar_title_page"/>

                <TextView
                    android:id="@+id/devider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey"
                    android:layout_centerInParent="true"/>



                <TextView
                    android:layout_toRightOf="@+id/devider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:lineSpacingExtra="8dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/prompt_dob"
                    android:drawablePadding="5dp"
                    android:gravity="right"
                    android:textColor="@color/black_grey"
                    android:textSize="@dimen/TextSizeMicro"
                    />


                <TextView
                    android:layout_toRightOf="@+id/devider"
                    android:id="@+id/profileDob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:lineSpacingExtra="8dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="11/09/1998"
                    android:gravity="right"
                    android:textColor="@color/action_bar_title_page"
                    android:textSize="@dimen/TextSizeExtraLarge"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="8dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp"
            app:contentPaddingTop="5dp"
            app:contentPaddingBottom="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/profileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/prompt_email"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_grey"
                    android:drawableLeft="@drawable/ic_profile_email"
                    android:textSize="@dimen/TextSizeLarge"
                    />
                <TextView
                    android:id="@+id/profilePhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/prompt_phone"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_grey"
                    android:drawableLeft="@drawable/ic_profile_call"
                    android:textSize="@dimen/TextSizeLarge"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="8dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp"
            app:contentPaddingTop="5dp"
            app:contentPaddingBottom="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/profileCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/prompt_contry"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_grey"
                    android:textSize="@dimen/TextSizeSmall"
                    />
                <TextView
                    android:id="@+id/profileState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/prompt_state"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_grey"
                    android:textSize="@dimen/TextSizeSmall"
                    />

                <TextView
                    android:id="@+id/profileCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/prompt_city"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_grey"
                    android:textSize="@dimen/TextSizeSmall"
                    />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="8dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp"
            app:contentPaddingTop="5dp"
            app:contentPaddingBottom="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_toLeftOf="@+id/devider"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/prompt_about_me"
                    android:textSize="@dimen/TextSizeMicro"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_grey" />
                <TextView
                    android:id="@+id/prompt_about_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/prompt_about_me"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_grey"
                    android:textSize="@dimen/TextSizeSmall"
                    />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
